--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,12 @@
-# Binaries for programs and plugins
+# Go build
+bin/
+vendor/
 *.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-bin/*
-Dockerfile.cross
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
+*.log
 *.out
+*.test
+*.tmp
+.DS_Store
 
-# Go workspace file
-go.work
-
-# Kubernetes Generated files - skip generated files, except for vendored files
-!vendor/**/zz_generated.*
-
-# editor and IDE paraphernalia
-.idea
-.vscode
-*.swp
-*.swo
-*~
+# Kubebuilder
+config/manager/kustomization.yaml
