--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/swacd.swacd.io_tenants.yaml
+- bases/swacd.swacd.io_originservices.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
