--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -22,6 +22,9 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the swacd-operator itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- originservice_admin_role.yaml
+- originservice_editor_role.yaml
+- originservice_viewer_role.yaml
 - tenant_admin_role.yaml
 - tenant_editor_role.yaml
 - tenant_viewer_role.yaml
