--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,6 +7,7 @@ rules:
 - apiGroups:
   - swacd.swacd.io
   resources:
+  - originservices
   - tenants
   verbs:
   - create
@@ -19,12 +20,14 @@ rules:
 - apiGroups:
   - swacd.swacd.io
   resources:
+  - originservices/finalizers
   - tenants/finalizers
   verbs:
   - update
 - apiGroups:
   - swacd.swacd.io
   resources:
+  - originservices/status
   - tenants/status
   verbs:
   - get
