--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - swacd_v1alpha1_tenant.yaml
+- swacd_v1alpha1_originservice.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
