--- a/config/crd/bases/swacd.swacd.io_edgeroutes.yaml
+++ b/config/crd/bases/swacd.swacd.io_edgeroutes.yaml
@@ -4,14 +4,14 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.19.0
-  name: tenants.swacd.swacd.io
+  name: edgeroutes.swacd.swacd.io
 spec:
   group: swacd.swacd.io
   names:
-    kind: Tenant
-    listKind: TenantList
-    plural: tenants
-    singular: tenant
+    kind: EdgeRoute
+    listKind: EdgeRouteList
+    plural: edgeroutes
+    singular: edgeroute
   scope: Namespaced
   versions:
   - name: v1alpha1
@@ -36,29 +36,29 @@ spec:
           metadata:
             type: object
           spec:
-            description: TenantSpec defines the desired state of Tenant
             properties:
-              edgeServiceProviders:
-                description: EdgeServiceProviders lists references to provider CRDs
-                  (Cloudflare, Akamai)
+              backendRefs:
                 items:
-                  description: EdgeProviderRef defines a reference to a provider CRD
                   properties:
-                    apiGroup:
-                      type: string
-                    kind:
-                      type: string
                     name:
                       type: string
                   required:
-                  - apiGroup
-                  - kind
                   - name
                   type: object
                 type: array
+              cache:
+                properties:
+                  enabled:
+                    type: boolean
+                required:
+                - enabled
+                type: object
+              fqdn:
+                type: string
+            required:
+            - fqdn
             type: object
           status:
-            description: TenantStatus defines the observed state of Tenant
             properties:
               phase:
                 type: string
