--- a/config/crd/bases/swacd.swacd.io_cloudflareproviders.yaml
+++ b/config/crd/bases/swacd.swacd.io_cloudflareproviders.yaml
@@ -36,26 +36,35 @@ spec:
           metadata:
             type: object
           spec:
+            description: CloudflareProviderSpec defines the desired state of CloudflareProvider
             properties:
               accountID:
                 type: string
               apiTokenSecretRef:
+                description: SecretRef defines a reference to a Kubernetes Secret
+                  key.
                 properties:
                   key:
+                    description: Key inside the Secret data
                     type: string
                   name:
+                    description: Name of the Secret
                     type: string
                 required:
                 - key
                 - name
                 type: object
+              zoneName:
+                type: string
             required:
             - accountID
             - apiTokenSecretRef
+            - zoneName
             type: object
           status:
+            description: CloudflareProviderStatus defines the observed state of CloudflareProvider
             properties:
-              phase:
+              state:
                 type: string
             type: object
         type: object
