--- a/config/samples/swacd_v1alpha1_akamaiprovider.yaml
+++ b/config/samples/swacd_v1alpha1_akamaiprovider.yaml
@@ -1,9 +1,9 @@
 apiVersion: swacd.swacd.io/v1alpha1
 kind: AkamaiProvider
 metadata:
-  labels:
-    app.kubernetes.io/name: swacd-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: akamaiprovider-sample
+  name: akamai-prod
 spec:
-  # TODO(user): Add fields here
+  contractID: "akm-contract-789"
+  credentialSecretRef:
+    name: akamai-credential
+    key: credential
