--- a/config/samples/swacd_v1alpha1_cloudflareprovider.yaml
+++ b/config/samples/swacd_v1alpha1_cloudflareprovider.yaml
@@ -1,9 +1,9 @@
 apiVersion: swacd.swacd.io/v1alpha1
 kind: CloudflareProvider
 metadata:
-  labels:
-    app.kubernetes.io/name: swacd-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: cloudflareprovider-sample
+  name: cloudflare-prod
 spec:
-  # TODO(user): Add fields here
+  accountID: "cf-account-123"
+  apiTokenSecretRef:
+    name: cloudflare-api-token
+    key: token
