--- a/config/samples/swacd_v1alpha1_tenant.yaml
+++ b/config/samples/swacd_v1alpha1_tenant.yaml
@@ -1,8 +1,13 @@
 apiVersion: swacd.swacd.io/v1alpha1
 kind: Tenant
 metadata:
-  name: tenant-sample
+  name: acme-tenant
 spec:
-  lob: Cloud
-  environment: Dev
-  contactEmail: team@swacd.io
+  displayName: "ACME Demo Tenant"
+  edgeServiceProviders:
+    - apiGroup: swacd.swacd.io
+      kind: CloudflareProvider
+      name: cloudflare-prod
+    - apiGroup: swacd.swacd.io
+      kind: AkamaiProvider
+      name: akamai-prod
