Stable working state: CRDs and controllers validated with Tenant & OriginService status updates

--- a/config/samples/swacd_v1alpha1_akamaiprovider.yaml
+++ b/config/samples/swacd_v1alpha1_akamaiprovider.yaml
@@ -3,7 +3,7 @@ kind: AkamaiProvider
 metadata:
   name: akamai-prod
 spec:
-  contractID: "akm-contract-789"
+  configSection: default
   credentialSecretRef:
-    name: akamai-credential
-    key: credential
+    name: akamai-credentials               # 🔹 Secret name
+    key: edgerc                           # 🔹 Required key field inside that Secret
