--- a/config/samples/swacd_v1alpha1_originservice.yaml
+++ b/config/samples/swacd_v1alpha1_originservice.yaml
@@ -3,9 +3,7 @@ kind: OriginService
 metadata:
   name: acme-origin
 spec:
-  endpoint: "https://acme-origin.example.com"
-  healthCheck:
-    path: "/healthz"
-  auth:
-    tls:
-      enabled: true
+  hostname: dp53cw9qm2h5h.cloudfront.net  # Example CloudFront origin
+  protocol: https
+  port: 443
+  healthCheckPath: /index.html
