feat: Convert SWACD operator to multicluster-runtime
- Convert all controllers from controller-runtime to multicluster-runtime v0.21.0-alpha.9
- Implement enterprise EdgeServiceProvider references with apiGroup/kind/namespace
- Add multicluster-aware reconciliation and enhanced logging
- Update all sample YAML files for enterprise compliance
- Ready for KCP workspaces and multi-EKS production deployment

--- a/config/crd/bases/swacd.swacd.io_tenants.yaml
+++ b/config/crd/bases/swacd.swacd.io_tenants.yaml
@@ -45,10 +45,24 @@ spec:
               edgeServiceProviders:
                 items:
                   properties:
+                    apiGroup:
+                      description: APIGroup of the provider resource (e.g., "swacd.swacd.io")
+                      type: string
+                    kind:
+                      description: Kind of the provider resource (e.g., "CloudflareProvider",
+                        "AkamaiProvider")
+                      type: string
                     name:
+                      description: Name of the provider resource
                       type: string
-                    type:
+                    namespace:
+                      description: Namespace of the provider resource (optional, defaults
+                        to same namespace)
                       type: string
+                  required:
+                  - apiGroup
+                  - kind
+                  - name
                   type: object
                 type: array
               environment:
