--- a/config/samples/swacd_v1alpha1_edgeroute.yaml
+++ b/config/samples/swacd_v1alpha1_edgeroute.yaml
@@ -1,7 +1,8 @@
 apiVersion: swacd.swacd.io/v1alpha1
 kind: EdgeRoute
 metadata:
-  name: acme-edge-route
+  name: acme-route
+  namespace: default
 spec:
   fqdn: "acme.edge.cloudcfg.io"
   backendRefs:
